--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "angular2": "2.0.0-beta.0",
     "es6-promise": "3.0.2",
     "es6-shim": "0.33.3",
+    "ng2-material": "^0.2.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "zone.js": "0.5.10"
