--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "angular2": "^2.0.0-beta.9",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.33.13",
-    "ng2-material": "0.2.11",
+    "angular2": ">=2.0.0-beta.11",
+    "es6-promise": ">=3.0.2",
+    "es6-shim": ">=0.35.0",
+    "ng2-material": "0.2.12",
     "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.5.15"
+    "rxjs": ">=5.0.0-beta.2",
+    "zone.js": ">=0.6.4"
   }
 }
