--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
   },
   "homepage": "https://github.com/angular/angular2-seed#readme",
   "devDependencies": {
-    "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "style-loader": "^0.13.0",
+    "css-loader": "0.23.1",
+    "file-loader": "0.8.5",
+    "style-loader": "0.13.0",
     "ts-loader": "^0.7.2",
-    "typescript": "^1.7.3",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.0"
+    "typescript": "1.8.0",
+    "url-loader": "0.5.7",
+    "webpack": "1.12.13",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
     "angular2": ">=2.0.0-beta.11",
