--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "angular2": ">=2.0.0-beta.11",
+    "angular2-moment": "^0.5.0",
     "es6-promise": ">=3.0.2",
     "es6-shim": ">=0.35.0",
     "ng2-material": "0.2.12",
