SCSS is been configured now reviewed by Swapnil

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "typescript": "1.8.0",
     "url-loader": "0.5.7",
     "webpack": "1.12.13",
-    "webpack-dev-server": "1.14.1"
+    "webpack-dev-server": "1.14.1",
+    "raw-loader" : "0.5.1",
+    "node-sass" : "3.6.0",
+    "sass-loader" : "3.2.0"
   },
   "dependencies": {
     "angular2": ">=2.0.0-beta.11",
