--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   "devDependencies": {
     "css-loader": "0.23.1",
     "file-loader": "0.8.5",
+    "node-sass": "3.6.0",
+    "raw-loader": "0.5.1",
+    "sass-loader": "3.2.0",
     "style-loader": "0.13.0",
     "ts-loader": "^0.7.2",
     "typescript": "1.8.0",
+    "typings": "^0.8.1",
     "url-loader": "0.5.7",
     "webpack": "1.12.13",
-    "webpack-dev-server": "1.14.1",
-    "raw-loader" : "0.5.1",
-    "node-sass" : "3.6.0",
-    "sass-loader" : "3.2.0"
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
     "angular2": ">=2.0.0-beta.11",
@@ -39,7 +40,7 @@
     "es6-shim": ">=0.35.0",
     "ng2-material": "0.2.12",
     "reflect-metadata": "0.1.2",
-    "rxjs": ">=5.0.0-beta.2",
+    "rxjs": "=5.0.0-beta.2",
     "zone.js": ">=0.6.4"
   }
 }
