--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "angular2": ">=2.0.0-beta.11",
+    "angular2": ">=2.0.0-beta.14",
     "angular2-moment": "^0.5.0",
     "es6-promise": ">=3.0.2",
     "es6-shim": ">=0.35.0",
-    "ng2-material": "0.2.12",
+    "ng2-material": "0.3.7",
     "reflect-metadata": "0.1.2",
-    "rxjs": "=5.0.0-beta.2",
-    "zone.js": ">=0.6.4"
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": ">=0.6.6"
   }
 }
