--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "angular2": ">=2.0.0-beta.14",
+    "angular2": "=2.0.0-beta.14",
     "angular2-moment": "^0.5.0",
     "es6-promise": ">=3.0.2",
     "es6-shim": ">=0.35.0",
