--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ng2-material": "0.3.7",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
+    "textangular": "^1.5.1",
     "zone.js": ">=0.6.6"
   }
 }
