--- a/package.json
+++ b/package.json
@@ -3,47 +3,66 @@
   "version": "1.0.0",
   "description": "A simple starter Angular2 project",
   "scripts": {
-    "start": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 8080 --host localhost --content-base src",
-    "dev": "webpack-dev-server --devtool eval --progress --colors --hot --content-base build",
-    "deploy": "NODE_ENV=production webpack -p --config webpack.production.config.js"
+    "typings-install": "typings install",
+    "postinstall": "npm run typings-install",
+    "build": "webpack --inline --colors --progress --display-error-details --display-cached",
+    "watch": "npm run build -- --watch",
+    "server": "webpack-dev-server --inline --colors --progress --display-error-details --display-cached --port 8080  --content-base src",
+    "start": "npm run server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/sudhakarphule1/mars.git"
+  "contributors": [
+    "Rob Wormald <robwormald@gmail.com>",
+    "PatrickJS <github@gdi2290.com>"
+  ],
+  "license": "MIT",
+  "devDependencies": {
+    "awesome-typescript-loader": "~0.16.2",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.35.0",
+    "reflect-metadata": "0.1.2",
+    "source-map-loader": "^0.1.5",
+    "typescript": "~1.8.9",
+    "typings": "^0.7.9",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0",
+    "webpack-merge": "^0.8.4",
+    "raw-loader": "0.5.1",
+    "sass-loader": "3.2.0",
+    "node-sass": "3.7.0",
+    "css-loader": "0.23.1",
+    "file-loader": "0.8.5",
+    "style-loader": "0.13.0"
+  },
+  "dependencies": {
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/platform-server": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular2-material/checkbox": "^2.0.0-alpha.5-2",
+    "@angular2-material/core": "^2.0.0-alpha.5-2",
+    "angular2-moment": "^0.8.0",
+    "core-js": "^2.2.0",
+    "ng2-material": "^0.4.1",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "~0.6.12"
   },
   "keywords": [
     "Angular2",
-    "angular2-seed"
+    "angular2-seed",
+    "official angular 2 seed",
+    "official angular2 seed"
   ],
-  "author": "Rob Wormald <robwormald@gmail.com>",
-  "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/angular/angular2-seed.git"
+  },
   "bugs": {
     "url": "https://github.com/angular/angular2-seed/issues"
   },
-  "homepage": "https://github.com/angular/angular2-seed#readme",
-  "devDependencies": {
-    "css-loader": "0.23.1",
-    "file-loader": "0.8.5",
-    "node-sass": "3.6.0",
-    "raw-loader": "0.5.1",
-    "sass-loader": "3.2.0",
-    "style-loader": "0.13.0",
-    "ts-loader": "^0.7.2",
-    "typescript": "1.8.0",
-    "typings": "^0.8.1",
-    "url-loader": "0.5.7",
-    "webpack": "1.12.13",
-    "webpack-dev-server": "1.14.1"
-  },
-  "dependencies": {
-    "angular2": "=2.0.0-beta.14",
-    "angular2-moment": "^0.5.0",
-    "es6-promise": ">=3.0.2",
-    "es6-shim": ">=0.35.0",
-    "ng2-material": "0.3.7",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "textangular": "^1.5.1",
-    "zone.js": ">=0.6.6"
-  }
+  "homepage": "https://github.com/angular/angular2-seed#readme"
 }
